Add some typical mirage tests

--- a/app/templates/contacts/index.hbs
+++ b/app/templates/contacts/index.hbs
@@ -1,4 +1,4 @@
-<ul>
+<ul id="contacts">
   {{#each model as |contact|}}
   <li>{{link-to contact.firstName 'contacts.show' contact}}</li>
   {{/each}}
