Add search on contacts list

--- a/app/templates/contacts/index.hbs
+++ b/app/templates/contacts/index.hbs
@@ -1,3 +1,7 @@
+{{input placeholder="Search" value=search}}
+
+<br>
+
 <ul id="contacts">
   {{#each model as |contact|}}
   <li>{{link-to contact.firstName 'contacts.show' contact}}</li>
